--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Calendario de eventos para la semana de la ingeniería"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -27,7 +27,7 @@
     <title>Semana de ingeniera 2024 uacj DIIM</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Por favor activa JavaScript para ver esta pagina.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
